# sentimeterKE

./: .gitignore  Pipfile  README.md  challenge_1.ipynb  get_by_search_terms.py  get_by_username.py  get_tweets.py  logger.py  main.py  pyproject.toml  requirements.txt  run.sh  sentiment.ipynb  sentimenter.ipynb  sentimenter.py  serve_app.py  test_api.py  trigger.py  tweet_cleaner.py
.streamlit/: secrets.toml
logs/: search_2020-11-11 22:20:52.638769.txt  search_2021-08-30 17:44:14.958252.txt  tweets_2020-11-11 22:20:52.638290.txt  tweets_2021-03-10 22:39:00.340460.txt  tweets_2021-03-11 02:44:02.412961.txt  tweets_2021-05-29 23:35:28.553043.txt  tweets_2021-05-30 13:50:28.603816.txt  tweets_2021-05-30 13:59:28.770894.txt  tweets_2021-08-30 17:41:45.022114.txt
tweets/: ['Ruto', 'TangaTanga'].json  ['Ruto', 'corruption'].json  ['Ruto'].json  tweet_list.csv  tweet_list.xlsx  tweets.csv  tweets.json  tweets.xlsx
